building sections and adding about me

--- a/index.html
+++ b/index.html
@@ -24,18 +24,49 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://github.com/helenesauve">Github</a>
                     </li>
                 </ul>
         </div>
       </nav>
+      <!-- End of navbar -->
+
+      <!-- jumbotron -->
+      <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-4">Hey I'm Hélène</h1>
+          <p id="type-text"></p>
+        </div>
+      </div>
+      <!-- end of jumbotron -->
+
+      <!-- About section -->
+      <section class="about-me" id="about">
+        <h2>About Me</h2>
+        <img src="assets/images/helene.jpeg" alt="profile picture of Hélène Sauvé">
+        <p>I am a marketeer in Higher Education, self-training to become a Front-End Developer. Currently studying
+          a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
+          and Javascript.
+          <br>Outside of work and this course, I love the outdoors, spending time with friends and dogs and I have a
+          passion for Marcel Proust's <i>In Search of Lost Time</i>.
+        </p>
+      </section>
+      <!-- Skills section -->
+      <section class="skills" id="skills">
+        <h2>Skills</h2>
+      </section>
+      <!-- Projects section -->
+      <section class="project" id="projects">
+        <h2>Projects</h2>
+      </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
