--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Hélène Sauvé | Portfolio</title>
 </head>
 <body>
