fixing about section with flexbox

--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
 
   <!-- About section -->
   <div class="container">
-    <section class="about" id="about">
-      <h2>About Me</h2>
+    <h2>About Me</h2>
+    <section class="flex-container about" id="about">
+      <div class="flex-child-1">
       <img src="assets/images/helene.jpeg" alt="profile picture of Hélène Sauvé">
+    </div>
+    <div class="flex-child-2">
       <p>Currently upskilling for a career change. Studying
         a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
         and Javascript.
@@ -61,6 +64,7 @@
         <br>Outside of work and this course, I love the outdoors, spending time with friends and dogs and I have a
         passion for Marcel Proust's <i>In Search of Lost Time</i>.
       </p>
+    </div>
     </section>
     <!-- Skills section -->
     <section class="skills" id="skills">
@@ -77,7 +81,7 @@
               <img src="assets/images/weather.jpg" class="card-img-top img-fluid" alt="picture of a dark sky with lightening">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check out the code</a>
             </div>
           </div>
         </div>
@@ -88,7 +92,7 @@
               <img src="assets/images/coffee.png" class="card-img-top img-fluid" alt="coffee curator app">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check out the code</a>
             </div>
           </div>
         </div>
@@ -101,7 +105,7 @@
               <img src="assets/images/password-generator.png" class="card-img-top img-fluid" alt="image of a password generator">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used:</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check out the code</a>
             </div>
           </div>
         </div>
@@ -112,7 +116,7 @@
               <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid" alt="image of a work day scheduler">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check out the code</a>
             </div>
           </div>
         </div>
