adding bouncy effect to skills

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Hélène Sauvé | Portfolio</title>
@@ -52,23 +53,33 @@
     <h2>About Me</h2>
     <section class="flex-container about" id="about">
       <div class="flex-child-1">
-      <img src="assets/images/helene.jpeg" alt="profile picture of Hélène Sauvé">
-    </div>
-    <div class="flex-child-2">
-      <p>Currently upskilling for a career change. Studying
-        a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
-        and Javascript.
-        <br>With more than five years experience in Marketing, working both in agency and client-side, I have honed
-        communication and organisation skills over the years.
-        <br>At work and at home, I always strive to learn new skills.
-        <br>Outside of work and this course, I love the outdoors, spending time with friends and dogs and I have a
-        passion for Marcel Proust's <i>In Search of Lost Time</i>.
-      </p>
-    </div>
+        <img src="assets/images/helene.jpeg" alt="profile picture of Hélène Sauvé">
+      </div>
+      <div class="flex-child-2">
+        <p>Currently upskilling for a career change. Studying
+          a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
+          and Javascript.
+          <br>
+          <br>With more than five years experience in Marketing, working both in agency and client-side, I have honed
+          communication and organisation skills over the years.
+          <br>At work and at home, I always strive to learn new skills.
+          <br>
+          <br>Outside of work and this course, I love the outdoors, spending time with friends and dogs and I have a
+          passion for Marcel Proust's <i>In Search of Lost Time</i>.
+        </p>
+      </div>
     </section>
     <!-- Skills section -->
-    <section class="skills" id="skills">
+    <section class="skills">
       <h2>Skills</h2>
+      <a href="something" class="button1 bouncy">HTML</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.07s">CSS</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.14s">JavaScript</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.21s">JQuery</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.21s">Bootstrap</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.21s">AJAX</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.21s">Node.js</a>
+<a href="something" class="button1 bouncy" style="animation-delay:0.21s">React</a>
     </section>
     <!-- Projects section -->
     <section class="project" id="projects">
@@ -78,10 +89,11 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Weather Forecast App</h5>
-              <img src="assets/images/weather.jpg" class="card-img-top img-fluid" alt="picture of a dark sky with lightening">
+              <img src="assets/images/weather.jpg" class="card-img-top img-fluid"
+                alt="picture of a dark sky with lightening">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-              <a href="#" class="btn btn-primary">Check out the code</a>
+              <a href="#" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -92,7 +104,7 @@
               <img src="assets/images/coffee.png" class="card-img-top img-fluid" alt="coffee curator app">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-              <a href="#" class="btn btn-primary">Check out the code</a>
+              <a href="#" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -102,10 +114,11 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Password Generator</h5>
-              <img src="assets/images/password-generator.png" class="card-img-top img-fluid" alt="image of a password generator">
+              <img src="assets/images/password-generator.png" class="card-img-top img-fluid"
+                alt="image of a password generator">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used:</p>
-              <a href="#" class="btn btn-primary">Check out the code</a>
+              <a href="#" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -113,10 +126,11 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Work-Day Scheduler</h5>
-              <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid" alt="image of a work day scheduler">
+              <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
+                alt="image of a work day scheduler">
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-              <a href="#" class="btn btn-primary">Check out the code</a>
+              <a href="#" class="btn">Check me out</a>
             </div>
           </div>
         </div>
