--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f74a19b708.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Hélène Sauvé | Portfolio</title>
@@ -15,7 +18,7 @@
   <!-- Navbar -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Hélène Sauvé</a>
+    <a class="navbar-brand" href="#"><i class="fa-solid fa-house"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,7 +35,7 @@
           <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/helenesauve">Github</a>
+          <a class="nav-link" target="_blank" href="https://github.com/helenesauve">Github</a>
         </li>
       </ul>
     </div>
@@ -51,20 +54,19 @@
   <!-- About section -->
   <div class="container">
     <h2>About Me</h2>
+    <hr>
     <section class="flex-container about" id="about">
       <div class="flex-child-1">
-        <img src="assets/images/helene.jpeg" alt="profile picture of Hélène Sauvé">
+        <img src="assets/images/helene-courgette.png" alt="profile picture of Hélène Sauvé">
       </div>
       <div class="flex-child-2">
         <p>Currently upskilling for a career change. Studying
           a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
           and Javascript.
           <br>
-          <br>With more than five years experience in Marketing, working both in agency and client-side, I have honed
-          communication and organisation skills over the years.
-          <br>At work and at home, I always strive to learn new skills.
+          <br>With more than five years experience in Marketing, working both in agency and client-side, I have mastered skills in communication and thrive in environments where knowledge-sharing and teamwork are vital.
           <br>
-          <br>Outside of work and this course, I love the outdoors, spending time with friends and dogs and I have a
+          <br>Outside of work and this course, I love the outdoors, hiking, running, music festivals, spending time with friends and dogs and I have a
           passion for Marcel Proust's <i>In Search of Lost Time</i>.
         </p>
       </div>
@@ -72,6 +74,7 @@
     <!-- Skills section -->
     <section class="skills">
       <h2>Skills</h2>
+      <hr>
       <a href="something" class="button1 bouncy">HTML</a>
 <a href="something" class="button1 bouncy" style="animation-delay:0.07s">CSS</a>
 <a href="something" class="button1 bouncy" style="animation-delay:0.14s">JavaScript</a>
@@ -84,6 +87,7 @@
     <!-- Projects section -->
     <section class="project" id="projects">
       <h2>Projects</h2>
+      <hr>
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
