adding readme video

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
   <!-- About section -->
   <div class="container">
+    <hr>
     <h2>About Me</h2>
     <hr>
     <section class="flex-container about" id="about">
@@ -61,33 +62,64 @@
       </div>
       <div class="flex-child-2">
         <p>Currently upskilling for a career change. Studying
-          a 16 week intense Skills Bootcamp in Front-End Web Developer with edX, my learning focuses on HTML, CSS
-          and Javascript.
+          a 16 week intense Skills Bootcamp in Front-End Web Developer with edX with a graduation end of March 2023.
           <br>
-          <br>With more than five years experience in Marketing, working both in agency and client-side, I have mastered skills in communication and thrive in environments where knowledge-sharing and teamwork are vital.
+          <br>With more than five years experience in Marketing, working both in agency and client-side, I have mastered
+          skills in communication and thrive in environments where knowledge-sharing and teamwork are vital.
           <br>
-          <br>Outside of work and this course, I love the outdoors, hiking, running, music festivals, spending time with friends and dogs and I have a
+          <br>Outside of work and this course, I love the outdoors, growing giant courgettes, hiking, running, music
+          festivals, craft beers, spending time with friends and dogs and I have a
           passion for Marcel Proust's <i>In Search of Lost Time</i>.
         </p>
       </div>
     </section>
     <!-- Skills section -->
     <section class="skills">
+      <hr>
       <h2>Skills</h2>
       <hr>
-      <a href="something" class="button1 bouncy">HTML</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.07s">CSS</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.14s">JavaScript</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.21s">JQuery</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.21s">Bootstrap</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.21s">AJAX</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.21s">Node.js</a>
-<a href="something" class="button1 bouncy" style="animation-delay:0.21s">React</a>
+      <button class="button1 expand">HTML</button>
+      <button class="button1 expand">CSS</button>
+      <button class="button1 expand">JavaScript</button>
+      <button class="button1 expand">JQuery</button>
+      <button class="button1 expand">ES6</button>
+      <button class="button1 expand">Bootstrap</button>
+      <button class="button1 expand">AJAX</button>
+      <button class="button1 expand">Node.js</button>
+      <button class="button1 expand">React</button>
     </section>
     <!-- Projects section -->
     <section class="project" id="projects">
+      <hr>
       <h2>Projects</h2>
       <hr>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">README Generator</h5>
+              <video>
+                <source src="/assets/media/readme.webm" type="video/webm"></video>
+              <p class="card-text">A programme that creates a README file using Node.js. The user is prompted with questions about the file in the console and the README file is generated using the answers provided.
+              </p>
+              <p class="card-text">Skills used: JavaScript, Node.js, NPM</p>
+              <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn">Check me out</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Work-Day Scheduler</h5>
+              <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
+                alt="image of a work day scheduler">
+              <p class="card-text">A simple calendar application that allows a user to save events for each hour of the
+                day by modifying the starter code.</p>
+              <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
+              <a href="https://github.com/helenesauve/work-day-scheduler" target="_blank" class="btn">Check me out</a>
+            </div>
+          </div>
+        </div>
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
@@ -95,9 +127,9 @@
               <h5 class="card-title">Weather Forecast App</h5>
               <img src="assets/images/weather.jpg" class="card-img-top img-fluid"
                 alt="picture of a dark sky with lightening">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">A simple app rendering the weather forecast for the next 5 days for a city input provided by the user.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-              <a href="#" class="btn">Check me out</a>
+              <a href="https://github.com/helenesauve/weather-dashboard" target="_blank" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -106,9 +138,10 @@
             <div class="card-body">
               <h5 class="card-title">Coffee Curator</h5>
               <img src="assets/images/coffee.png" class="card-img-top img-fluid" alt="coffee curator app">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. Requires the Allow CORS
+                Chrome extension to function at the moment.</p>
               <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-              <a href="#" class="btn">Check me out</a>
+              <a href="https://github.com/helenesauve/Coffee-App-Project" target="_blank" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -120,9 +153,10 @@
               <h5 class="card-title">Password Generator</h5>
               <img src="assets/images/password-generator.png" class="card-img-top img-fluid"
                 alt="image of a password generator">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text">Skills used:</p>
-              <a href="#" class="btn">Check me out</a>
+              <p class="card-text">A password generator that returns a password based on the user's selected options.
+              </p>
+              <p class="card-text">Skills used: JavaScript and JQuery</p>
+              <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn">Check me out</a>
             </div>
           </div>
         </div>
@@ -132,9 +166,10 @@
               <h5 class="card-title">Work-Day Scheduler</h5>
               <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
                 alt="image of a work day scheduler">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">A simple calendar application that allows a user to save events for each hour of the
+                day by modifying the starter code.</p>
               <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-              <a href="#" class="btn">Check me out</a>
+              <a href="https://github.com/helenesauve/work-day-scheduler" target="_blank" class="btn">Check me out</a>
             </div>
           </div>
         </div>
