fixing gif size

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">README Generator</h5>
-                <img src="./assets/images/output.gif" alt="walkthrough video gif">
+                <img id="gif" src="./assets/images/output.gif" alt="walkthrough video">
                 <p class="card-text">A programme that creates a README file using Node.js. The user is prompted with
                   questions about the file in the console and the README file is generated using the answers provided.
                 </p>
