--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">README Generator</h5>
-                <img id="gif" src="./assets/images/output.gif" alt="walkthrough video">
+                <img class="img-fluid" id="gif" src="./assets/images/output.gif" alt="walkthrough video">
                 <p class="card-text">A programme that creates a README file using Node.js. The user is prompted with
                   questions about the file in the console and the README file is generated using the answers provided.
                 </p>
@@ -111,13 +111,13 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Work-Day Scheduler</h5>
-                <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
+                <img class="img-fluid" src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
                   alt="image of a work day scheduler">
                 <p class="card-text">A simple calendar application that allows a user to save events for each hour of
                   the
                   day by modifying the starter code.</p>
                 <p class="card-text">Skills used: JavaScript, JQuery, Moment.js</p>
-                <a href="https://github.com/helenesauve/work-day-scheduler" target="_blank" class="btn">Check me out</a>
+                <a href="https://helenesauve.github.io/work-day-scheduler/" target="_blank" class="btn">Check me out</a>
               </div>
             </div>
           </div>
@@ -126,12 +126,12 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Weather Forecast App</h5>
-                  <img src="assets/images/weather.jpg" class="card-img-top img-fluid"
+                  <img class="img-fluid" src="assets/images/weather.jpg" class="card-img-top img-fluid"
                     alt="picture of a dark sky with lightening">
                   <p class="card-text">A simple app rendering the weather forecast for the next 5 days for a city input
                     provided by the user.</p>
                   <p class="card-text">Skills used: JavaScript, JQuery, Open Weather forecast API, local storage</p>
-                  <a href="https://github.com/helenesauve/weather-dashboard" target="_blank" class="btn">Check me
+                  <a href="https://helenesauve.github.io/weather-dashboard/" target="_blank" class="btn">Check me
                     out</a>
                 </div>
               </div>
@@ -140,12 +140,12 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Coffee Curator</h5>
-                  <img src="assets/images/coffee.png" class="card-img-top img-fluid" alt="coffee curator app">
+                  <img class="img-fluid" src="assets/images/coffee.png" class="card-img-top img-fluid" alt="coffee curator app">
                   <p class="card-text">An app for coffee lovers that quickly finds 5 cafés near you. Requires the Allow
-                    CORS
+                    CORS. App built as part of a group work.
                     Chrome extension to function at the moment.</p>
                   <p class="card-text">Skills used: HTML, CSS, JavaScript, JQuery, Google Maps APIs, AJAX</p>
-                  <a href="https://github.com/helenesauve/Coffee-App-Project" target="_blank" class="btn">Check me
+                  <a href="https://harrygarstang.github.io/Coffee-App-Project/" target="_blank" class="btn">Check me
                     out</a>
                 </div>
               </div>
@@ -156,13 +156,13 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Password Generator</h5>
-                  <img src="assets/images/password-generator.png" class="card-img-top img-fluid"
+                  <img class="img-fluid" src="assets/images/password-generator.png" class="card-img-top img-fluid"
                     alt="image of a password generator">
                   <p class="card-text">A password generator that returns a password based on the user's selected
                     options.
                   </p>
                   <p class="card-text">Skills used: JavaScript and JQuery</p>
-                  <a href="https://github.com/helenesauve/Password-Generator" target="_blank" class="btn">Check me
+                  <a href="https://helenesauve.github.io/Password-Generator/" target="_blank" class="btn">Check me
                     out</a>
                 </div>
               </div>
@@ -171,7 +171,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Work-Day Scheduler</h5>
-                  <img src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
+                  <img class="img-fluid" src="assets/images/day-scheduler.png" class="card-img-top img-fluid"
                     alt="image of a work day scheduler">
                   <p class="card-text">A simple calendar application that allows a user to save events for each hour of
                     the
